--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 body {
-  background-color: #fffbf0;
   font-family: "Poppins", sans-serif;
 }
 
@@ -12,4 +11,11 @@ body {
   padding: 10px;
   margin-right: 10px;
   border-radius: 10px;
+  margin: auto;
+}
+
+.ractangular {
+  width: 350px;
+  height: 104px;
+  background-color: #ffffff;
 }
